[build-system]
requires = ["flit_core >= 3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "etudes"
authors = [{name = "Gabe Freedman", email = "freedma5@uwm.edu}]
description = "PTA analyses with HMC and JAX"
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "jax[cpu]",
    "jaxlib",
    "enterprise-pulsar",
    "blackjax"
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "flake8-pyproject"
]
gpu = [
    "jax[cuda12]"
]

[tool.flake8]
max-line-length = 120
exclude = [
    "__pycache__",
    ".git",
    ".ipynb_checkpoints",
    ".tox",
    ".venv",
    "build",
    "dist",
    "docs",
    "venv"
]